Fix video player on mobile devices

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -56,6 +56,7 @@ body {
   top: 0;
   z-index: 50;
   background-color: var(--el-bg-color);
+  padding: 0;
 }
 .el-input__inner {
   font-family: inherit;
